<resources>
    <string name="app_name">♛ bookingHotel</string>
    <string name="suggest">Suggest</string>
    <string name="top_hotel">Top Hottel</string>
    <string name="welcome">Welcome</string>
    <string name="info">We will help you make a quick and convenient booking!</string>
    <string name="start">Start</string>
    <string name="tittle_search">Search hotel</string>
    <string name="price">Price</string>
    <string name="quality">Quality</string>
    <string name="address">Address</string>
    <string name="call">Call for advice</string>
    <string name="book_room">Book Room</string>
    <string name="information">Please complete all information</string>
    <string name="name_user">Name User</string>
    <string name="phone_number">Phone Number</string>
    <string name="hottel">Hottel</string>
    <string name="check_in_date">Check-in date</string>
    <string name="time">Time</string>
    <string name="total_price">Total price</string>
    <string name="enter_name">Enter your name here</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="select_check_in_date">Select check-in date</string>
    <string name="one_day">1 day</string>
    <string name="two_day">2 day</string>
    <string name="seven_day">7 day</string>
    <string name="tittle_booking">Make a reservation</string>
    <string name="booking_history">Booking history</string>
    <string name="tittle_information">Information</string>
    <string name="check">Check</string>
    <string name="successful_booking">Successful booking</string>
    <string name="booking_information">Booking information</string>
    <string name="cancel">Cancel</string>
    <string name="delete_booking">Delete</string>
    <string name="not_booking">You have not booked yet</string>
    <string name="spring_sale">Spring Sale</string>
    <string name="payment_methods">Payment methods</string>
    <string name="log_out">Logout</string>
    <string name="dialog_login">Successfully create an account</string>
    <string name="log_in">Login</string>
    <string name="incorrect">Incorrect account or password</string>
    <string name="user_name">User name</string>
    <string name="pass_word">Password</string>
    <string name="account_name">Enter account</string>
    <string name="register">Register</string>
    <string name="no_account">No account? Register now!</string>
    <string name="yes_account">Already have an account? Log in now!</string>
    <string name="enter_password">Enter password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>